crates/rcc_driver/tests/snapshots/mir/complex_real_to_complex_return.snap
---
source: crates/rcc_driver/tests/support/mod.rs
---
fn def#0() -> _Complex double {
  locals:
    _0: _Complex double;
    _1: double param name#21;
    _2: _Complex double;

  bb0:
    _2 = ComplexFromReal(copy _1, _Complex double);
    _0 = copy _2;
    return;

}
