crates/rcc_driver/tests/snapshots/mir/locals_and_expression.snap
---
source: crates/rcc_driver/tests/support/mod.rs
assertion_line: 35
---
fn def#0() -> int {
  locals:
    _0: int;
    _1: int param name#19;
    _2: int name#20;
    _3: int;

  bb0:
    StorageLive(_2);
    _3 = Add(copy _1, 1);
    _2 = copy _3;
    _0 = copy _2;
    StorageDead(_2);
    return;

}
