crates/rcc_driver/tests/snapshots/mir/switch_from_source.snap
---
source: crates/rcc_driver/tests/support/mod.rs
assertion_line: 35
---
fn def#0() -> int {
  locals:
    _0: int;
    _1: int param name#19;

  bb0:
    goto -> bb1;

  bb1:
    switchInt(copy _1) -> [1: bb2, otherwise: bb3];

  bb2:
    _0 = 2;
    return;

  bb3:
    _0 = 3;
    return;

  bb4:
    return;

  bb5:
    goto -> bb2;

}
